syntax = "proto3";

option go_package = "grpc/services";

package services;

service PackagebirdServices {
  // Create Operations
  rpc CreateProject(ProjectRequest) returns (OperationResponse) {};
  rpc CreatePackage(ProjectRequest) returns (OperationResponse) {};

  // Dependency Operations
  rpc AddPackage(PackageRequest) returns (OperationResponse) {};
  rpc RemovePackage(PackageRequest) returns (OperationResponse) {};

  // Package Operations
  rpc BuildPackage(PackageRequest) returns (OperationResponse) {};
  rpc TestPackage(PackageRequest) returns (OperationResponse) {};

  // Get Operations
  rpc GetPackages(Blank) returns (PackageList);
  rpc GetProjects(Blank) returns (ProjectList);

  // File Transfer Operations
  rpc DownloadFile(DownloadRequest) returns (stream File) {};
  rpc UploadFile(stream File) returns (OperationResponse) {};
}

message Blank {

}

message PackageList {
  repeated PackageName names = 1;
}

message ProjectList {
  repeated ProjectName names = 1;
}

message ProjectName {
  string name = 1;
}

message PackageName {
  string name = 1;
}

message ProjectRequest {
  string name = 1;
}

message PackageRequest {
  string name = 1;
  int64 version = 2;
}

message OperationResponse {
  bool success = 1;
  string header = 2;
  string message = 3;
}

message DownloadRequest {
  string path = 1;
}

message File {
  oneof content {
    string path = 1;
    bytes chunk = 2;
  }
}